Updated the html file

--- a/GoogleAPI.html
+++ b/GoogleAPI.html
@@ -9,7 +9,7 @@
 <h2> Using Google API to Locate Places</h2>
 <fieldset>
           <div>
-            <input id="btn" type="textbox" Placeholder="Search Place"/>
+            <input id="txtBx" type="textbox" Placeholder="Search Place"/>
              <input id="btn" type="button" value="Search Place"/>
         </fieldset> 
          <div id="map-canvas" style="height: 400px; width: 900px; margin:90px auto auto auto; padding-top:80px"> </div>   
